Kyverno-policies/cluster-policy.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: enforce-security-context
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Containers must not run as root or use privileged mode."
        pattern:
          spec:
            containers:
              - securityContext:
                  privileged: false
                  allowPrivilegeEscalation: false
                  runAsNonRoot: true
                  seccompProfile:
                    type: RuntimeDefault
